# Pixeval.Extensions

./: .gitignore  Pixeval.Extensions.sln  Pixeval.Extensions.slnx  README.md  nuget.config
.agents/skills/code-style/: SKILL.md
.agents/skills/format-style/: SKILL.md
.github/workflows/: cpp_build.yml  py_build.yml
src/: Directory.Build.props  Directory.Packages.props
src/Pixeval.Extensions.Common/: ComInteropHelper.cs  ComToNetStream.cs  ExtensionHelper.cs  ExtensionsHostStatics.cs  ICommandExtension.cs  IEntryExtension.cs  IException.cs  IExtension.cs  IExtensionsHost.cs  ILogger.cs  IProgressNotifier.cs  IStream.cs  ITaskCompletionSource.cs  NetToComStream.cs  Pixeval.Extensions.Common.csproj  StreamHelper.cs  TaskCompletionSourceWrapper.cs
src/Pixeval.Extensions.Common/Commands/: IIllustrationViewerCommandExtension.cs  INovelViewerCommandExtension.cs  IViewerCommandExtension.cs
src/Pixeval.Extensions.Common/Commands/Transformers/: IImageTransformerCommandExtension.cs  IImageTransformerExtension.cs  ITextTransformerCommandExtension.cs
src/Pixeval.Extensions.Common/Downloaders/: IDownloaderExtension.cs  IImageDownloaderExtension.cs  INovelFormatProviderExtension.cs
src/Pixeval.Extensions.Common/FormatProviders/: IAnimatedImageFormatProviderExtension.cs  IFormatProviderExtension.cs  IImageFormatProviderExtension.cs  INovelFormatProviderExtension.cs  IStaticImageFormatProviderExtension.cs
src/Pixeval.Extensions.Common/Internal/: ComToNetStream.cs  ExceptionToIExceptionAdaptor.cs  IExceptionToExceptionAdaptor.cs  IStreamToStreamAdaptor.cs  NetToComStream.cs  StreamAdaptor.cs  StreamToIStreamAdaptor.cs  TaskCompletionSourceAdaptor.cs  TaskCompletionSourceWrapper.cs  ThrowHelper.cs
src/Pixeval.Extensions.Common/Settings/: IBoolSettingsExtension.cs  IColorSettingsExtension.cs  IDateTimeOffsetSettingsExtension.cs  IDoubleSettingsExtension.cs  IEnumSettingsExtension.cs  IIntOrEnumSettingsExtension.cs  IIntSettingsExtension.cs  ISettingsExtension.cs  IStringSettingsExtension.cs  IStringsArrayExtension.cs  IStringsArraySettingsExtension.cs  SettingsType.cs
src/Pixeval.Extensions.Common/Transformers/: IImageTransformerExtension.cs
src/Pixeval.Extensions.Generator/: Model.cs  PidlDefaultValueFormatter.cs  PidlParser.cs  Pixeval.Extensions.Generator.csproj  PixevalExtensionsGenerator.cs  Program.cs  StringExtensions.cs  SymbolCatalog.cs  TypeNames.cs
src/Pixeval.Extensions.Generator/CSharp/: CSharpEmitterSupport.cs  CSharpPropertyExtensionEmitter.cs  CommonEmitter.cs  SdkEmitter.cs
src/Pixeval.Extensions.Generator/Cpp/: CppEmitter.cs  CppSymbolEmitter.cs
src/Pixeval.Extensions.Generator/Models/: AsyncMethodDefinition.cs  AsyncResultGetterDefinition.cs  DateTimeOffsetExpansion.cs  DictionaryElementKind.cs  DictionaryExpansion.cs  EnumDefinition.cs  EnumValue.cs  InterfaceDefinition.cs  MethodDefinition.cs  ParameterDefinition.cs  PidlAttribute.cs  PidlMetadata.cs  PidlModel.cs  PropertyAccessorKind.cs  PropertyDefinition.cs  ReturnArrayDefinition.cs
src/Pixeval.Extensions.Generator/Python/: PythonEmitter.cs  PythonSymbolEmitter.cs
src/Pixeval.Extensions.IDL/: commands.pidl  core.pidl  format-providers.pidl  metadata.json  settings.pidl
src/Pixeval.Extensions.SDK/: EntryExtensionBase.cs  ExtensionBase.cs  ExtensionsHostBase.cs  LoggerHelper.cs  Pixeval.Extensions.SDK.csproj
src/Pixeval.Extensions.SDK/Downloaders/: DownloaderExtensionBase.cs  ImageDownloaderExtensionBase.cs  NovelFormatProviderExtensionBase.cs
src/Pixeval.Extensions.SDK/FormatProviders/: AnimatedImageFormatProviderExtensionBase.cs  FormatProviderExtensionBase.cs  ImageFormatProviderExtensionBase.cs  NovelFormatProviderExtensionBase.cs  StaticImageFormatProviderExtensionBase.cs
src/Pixeval.Extensions.SDK/Internal/: Misc.cs
src/Pixeval.Extensions.SDK/Settings/: BoolSettingsExtensionBase.cs  ColorSettingsExtensionBase.cs  DateTimeOffsetSettingsExtensionBase.cs  DoubleSettingsExtensionBase.cs  EnumSettingsExtensionBase.cs  FontSettingsExtensionBase.cs  IntSettingsExtensionBase.cs  SettingsExtensionBase.cs  StringSettingsExtensionBase.cs  StringsArrayExtensionBase.cs  StringsArraySettingsExtensionBase.cs
src/Pixeval.Extensions.SDK/Transformers/: ImageTransformerCommandExtensionBase.cs  ImageTransformerExtensionBase.cs  TextTransformerCommandExtensionBase.cs
src/Pixeval.Extensions.Sample/: ExtensionHost.cs  ExtensionSampleHost.cs  Pixeval.Extensions.Sample.csproj
src/Pixeval.Extensions.Sample/Properties/PublishProfiles/: FolderProfile.pubxml
src/Pixeval.Extensions.Sample/Strings/: Resource.Designer.cs  Resource.en-US.resx  Resource.resx
src/cpp/: .gitignore  CMakeLists.txt  build.ps1  publish.json
src/cpp/Pixeval.Extensions.Cpp.Demo/: CMakeLists.txt
src/cpp/Pixeval.Extensions.Cpp.Demo/src/: demo.cpp
src/cpp/Pixeval.Extensions.Cpp.SDK/: CMakeLists.txt
src/cpp/Pixeval.Extensions.Cpp.SDK/include/pixeval/: extensions.common.hpp  extensions.hpp  extensions.sdk.export.hpp  extensions.sdk.extensions.hpp  extensions.sdk.host.hpp  extensions.sdk.hpp  extensions.sdk.settings.hpp  extensions.sdk.types.hpp
src/cpp/Pixeval.Extensions.Cpp.SDK/include/pixeval/detail/: extensions.sdk.core.inl.hpp  extensions.sdk.extensions.inl.hpp  extensions.sdk.host.inl.hpp  extensions.sdk.settings.inl.hpp  runtime.hpp
src/cpp/cmake/: PixevalExtensionsCppConfig.cmake.in
src/python/: .gitignore  CMakeLists.txt  build.ps1  publish.json  pyproject.toml  setup.py
src/python/demo/: pixeval_extension_host.py
src/python/pixeval_extensions/: __init__.py
src/python/pixeval_extensions/_runtime/: __init__.py  client.py  com.py  memory.py  types.py
src/python/pixeval_extensions/_sdk_runtime/: __init__.py  callbacks.py  core.py  host.py  metadata.py
src/python/runtime/: pixeval_python_bootstrap.c
